# Makefile.am
# Automake file for Wireshark
#
# $Id$
#
# Wireshark - Network traffic analyzer
# By Gerald Combs <gerald@wireshark.org>
# Copyright 2006 Gerald Combs
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

all:

SUBDIRS = \
	acp133		\
	acse		\
	ansi_map	\
	camel		\
	cdt		\
	cmip		\
	cms		\
	dap		\
	disp		\
	dop		\
	dsp		\
	ess		\
	ftam		\
	gnm		\
	gsmmap		\
	h225		\
	h235		\
	h245		\
	h248		\
	h450		\
	h450-ros	\
	inap		\
	ldap		\
	logotype-cert-extn	\
	mms		\
	mpeg-audio	\
	mpeg-pes	\
	nbap		\
	ns-cert-exts	\
	ocsp		\
	pkcs1		\
	pkcs12		\
	pkinit		\
	pkix1explicit	\
	pkix1implicit	\
	pkixcmp		\
	pkixcrmf	\
	pkixproxy	\
	pkixqualified	\
	pkixtsp		\
	pres		\
	q932		\
	q932-ros	\
	qsig		\
	ranap		\
	rnsap		\
	ros		\
	rrc		\
	rrlp		\
	rtse		\
	s4406		\
	sabp		\
	smrse		\
	snmp		\
	spnego		\
	t38		\
	ulp

EXTRA_DIST = \
	Makefile.nmake	\
	tcap/Makefile	\
	tcap/Makefile.nmake	\
	tcap/packet-tcap-template.c	\
	tcap/packet-tcap-template.h	\
	tcap/tcap.asn	\
	tcap/DialoguePDUs.asn	\
	tcap/TCAP-Remote-Operations-Information-Objects.asn	\
	tcap/TCAPMessages.asn	\
	tcap/TCAPPackage.asn	\
	tcap/UnidialoguePDUs.asn	\
	tcap/tcap.cnf	\
	wlancertextn/Makefile	\
	wlancertextn/Makefile.nmake	\
	wlancertextn/packet-wlancertextn-template.c	\
	wlancertextn/packet-wlancertextn-template.h	\
	wlancertextn/WLANCERTEXTN.asn	\
	wlancertextn/wlancertextn.cnf	\
	x411/Makefile	\
	x411/Makefile.nmake	\
	x411/packet-x411-template.c	\
	x411/packet-x411-template.h	\
	x411/x411.asn	\
	x411/x411.cnf	\
	x411/x411-exp.cnf	\
	x420/Makefile	\
	x420/Makefile.nmake	\
	x420/packet-x420-template.c	\
	x420/packet-x420-template.h	\
	x420/x420.asn	\
	x420/ftbp.asn	\
	x420/x420.cnf	\
	x420/x420-exp.cnf	\
	x509af/AuthenticationFramework.asn	\
	x509af/Makefile	\
	x509af/Makefile.nmake	\
	x509af/packet-x509af-template.c	\
	x509af/packet-x509af-template.h	\
	x509af/x509af.cnf	\
	x509af/x509af-exp.cnf	\
	x509ce/CertificateExtensions.asn	\
	x509ce/Makefile	\
	x509ce/Makefile.nmake	\
	x509ce/packet-x509ce-template.c	\
	x509ce/packet-x509ce-template.h	\
	x509ce/x509ce.cnf	\
	x509ce/x509ce-exp.cnf	\
	x509if/InformationFramework.asn	\
	x509if/Makefile	\
	x509if/Makefile.nmake	\
	x509if/packet-x509if-template.c	\
	x509if/packet-x509if-template.h	\
	x509if/x509if.cnf	\
	x509if/x509if-exp.cnf	\
	x509sat/Makefile	\
	x509sat/Makefile.nmake	\
	x509sat/packet-x509sat-template.c	\
	x509sat/packet-x509sat-template.h	\
	x509sat/SelectedAttributeTypes.asn	\
	x509sat/x509sat.cnf	\
	x509sat/x509sat-exp.cnf

MAINTAINERCLEANFILES = \
	Makefile.in

