# Makefile.am
# Automake file for Wireshark
#
# $Id$
#
# Wireshark - Network traffic analyzer
# By Gerald Combs <gerald@wireshark.org>
# Copyright 2006 Gerald Combs
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.


SUBDIRS = \
	acp133		\
	acse		\
	ansi_map	\
	ansi-tcap	\
	camel		\
	cdt		\
	cmip		\
	cms		\
	dap		\
	disp		\
	dop		\
	dsp		\
	ess		\
	ftam		\
	gnm		\
	goose		\
	gsmmap		\
	h225		\
	h235		\
	h245		\
	h248		\
	h282		\
	h283		\
	h323		\
	h450		\
	h450-ros	\
	h460		\
	h501		\
	inap		\
	ldap		\
	logotype-cert-extn	\
	lte-rrc	\
	mms		\
	mpeg-audio	\
	mpeg-pes	\
	nbap		\
	ns-cert-exts	\
	ocsp		\
	p7		\
	pcap		\
	pkcs1		\
	pkcs12		\
	pkinit		\
	pkix1explicit	\
	pkix1implicit	\
	pkixcmp		\
	pkixcrmf	\
	pkixproxy	\
	pkixqualified	\
	pkixtsp		\
	pres		\
	q932		\
	q932-ros	\
	qsig		\
	ranap		\
	rnsap		\
	ros		\
	rrc		\
	rrlp		\
	rtse		\
	s1ap		\
	s4406		\
	sabp		\
	smrse		\
	snmp		\
	spnego		\
	t125		\
	t38		\
	tcap		\
	ulp		\
	wlancertextn	\
	x2ap		\
	x411		\
	x420		\
	x509af		\
	x509ce		\
	x509if		\
	x509sat		\
	x721

EXTRA_DIST = \
	Makefile.nmake	\
	Makefile.inc.nmake	\
	Makefile.preinc.nmake

MAINTAINERCLEANFILES = \
	Makefile.in

